devspace - css fix:  stretch lists

--- a/src/app/main-content/devspace/channel-list/channel-list.component.scss
+++ b/src/app/main-content/devspace/channel-list/channel-list.component.scss
@@ -104,13 +104,6 @@ h3 {
     align-items: center;
 }
 
-.addChannelButton {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 25px;
-    margin-top: 16px;
-}
 
 .channel {
     margin-bottom: 8px;
@@ -174,24 +167,6 @@ h3 {
   }  
 
 
-.addChannelButton {
-    color: var(--text-black);
-    display: flex;
-    gap: 10px;
-    transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
-    .material-icons {
-        transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
-    }
-    &:hover {
-        color: var(--purple-1);
-        cursor: pointer;
-        .material-icons {
-            transform: scale(1.1);
-            color: var(--purple-1);
-
-        }
-    }
-}
 
 .rotateArrow {
     transform: rotate(0deg);
@@ -260,7 +235,8 @@ h3 {
 
 .dropDownChannelSection {
     overflow-y: auto;
-    max-height: 40%;
+    max-height: 100%;
+    min-height: 50%;
     transition: max-height 0.3s ease; 
     @include respond-to-minWidth(small){
         padding-left: 16px;
