--- a/src/app/main-content/devspace/devspace.component.scss
+++ b/src/app/main-content/devspace/devspace.component.scss
@@ -182,8 +182,12 @@ app-channel-list{
 app-contact-list{
     display: flex;
     flex-direction: column;
-    max-height: 100%;
+    max-height: 40%;
     overflow: hidden;
+}
+
+.stretch{
+    max-height: 100%;
 }
 
 .writeMessageButton{
@@ -196,3 +200,33 @@ app-contact-list{
         background-color: var(--primary-bg);
     }
 }
+
+.addChannelButton {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 25px;
+    margin-top: 16px;
+}
+
+
+.addChannelButton {
+    color: var(--text-black);
+    display: flex;
+    gap: 10px;
+    transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
+    .material-icons {
+        transition: transform 0.125s ease-in-out, color 0.125s ease-in-out;
+    }
+    &:hover {
+        color: var(--purple-1);
+        cursor: pointer;
+        .material-icons {
+            transform: scale(1.1);
+            color: var(--purple-1);
+
+        }
+    }
+}
+
+
